k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-server
  labels:
    app: task-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-server
  template:
    metadata:
      labels:
        app: task-server
    spec:
      containers:
      - name: task-server
        image: tu-usuario-docker/msc-procesos-tasks:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
