k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  labels:
    app: task-server
spec:
  type: ClusterIP
  selector:
    app: task-server
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
